# radiation-toolbox-reader

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  usage.ipynb
reader/: __init__.py  ers.py  exceptions.py  logger.py  pei.py  safecast.csv  safecast.py
tests/: test_reader.py  test_reader_ers.py  test_reader_log.py
tests/data/: sample.ers  sample.pei
utils/: read_data_dir.py
